fixed attachment test on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -94,7 +94,7 @@ section {
 // =============================== 1 SECTION (HOME) =====================================
 .home {
   background: url("../Img/LIUBPxK.jpg") no-repeat center / cover;
-  background-attachment: fixed;
+  // background-attachment: fixed;
   min-height: 100vh;
 
   .home-content {
@@ -219,7 +219,7 @@ section {
 // =============================== 3 SECTION (SKILLS + CONTACT) =====================================
 .skills_contact {
   background: url("../Img/LIUBPxK.jpg") no-repeat center/cover;
-  background-attachment: fixed;
+  // background-attachment: fixed;
 
   .skills_contact-content {
     @include flex-row();
